chore: show poster instead of video on mobile, update 404 page, fix articles page

--- a/themes/spichka/resources/styles/front-page.scss
+++ b/themes/spichka/resources/styles/front-page.scss
@@ -9,7 +9,7 @@
     min-height: calc(100vh - 2.875rem);
 
     h1 {
-      font-size: 3.125rem;
+      font-size: $giant-font-size;
     }
 
     .details {
@@ -65,6 +65,9 @@
     section {
       margin-top: map.get($spacers, 5) !important;
 
+      &:first-child {
+        margin-top: 0 !important;
+      }
       &:last-child {
         margin-bottom: map.get($spacers, 6);
       }
@@ -81,7 +84,7 @@
   .categories-card {
     border-radius: 0;
     border-color: $categories-card-border-color;
-    border-width: 2px;
+    border-width: $button-border-width;
 
     a {
       color: inherit;
