--- a/themes/spichka/resources/styles/variables.scss
+++ b/themes/spichka/resources/styles/variables.scss
@@ -47,3 +47,5 @@ $nav-link-padding-y: 0;
 $navbar-dark-color: $body-secondary-color;
 
 $categories-card-border-color: $dark-background-color;
+$button-border-width: 2px;
+$giant-font-size: 3.125rem;
